--- a/website_app/expenses-tracking-webapp/src/main-page/Home_Page/HomePage.css
+++ b/website_app/expenses-tracking-webapp/src/main-page/Home_Page/HomePage.css
@@ -40,6 +40,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-bg-02);
+    border: 1px solid var(--color-bg-04);
     border-radius: var(--size-03);
 }
 
